# AIBI-Computer-Vision-for-Manufacturing

./: .coverage  .gitignore  BARCODE_FORMAT.md  README.md  README_SYSTEM.md  pyproject.toml  pytest.ini  run_sfr_tests.py  run_tests.py
Meeting_Notes/: Oct2.txt  Sept29.txt
Questions/: Oct2.md
Requirements/: Oct02_Requirements_Analysis.md  System_Requirements.md  Unified_Requirements_Analysis.md
Scripts/: qr_test.py
configs/: OLD_workstation_1.json  workstation_01.json  workstation_11.json  workstation_3codes.json  workstation_code.json
data/: scans.db  simulation.db
logs/: run_1_20260322_160142.json  run_1_20260323_113108.json  run_1_20260326_134358.json  run_1_20260413_084332.json  run_1_20260417_235018.json
output/: scan_workstation_11_20260322_151749.json  scan_workstation_11_20260322_152331.json  scan_workstation_11_20260322_152559.json  scan_workstation_11_20260322_152643.json  scan_workstation_11_20260322_153057.json  scan_workstation_11_20260322_153131.json  scan_workstation_11_20260322_153224.json  scan_workstation_11_20260322_153549.json  scan_workstation_11_20260322_153706.json
outputs/: detections.csv
test_qr_codes/: workstation_02_samples.json  ws01_qr1.json  ws01_qr2.json  ws01_qr3.json  ws02_qr1.json  ws02_qr2.json  ws02_qr3.json  ws02_qr4.json
tests/: defined_tests.md  test_auto_coverage.py  test_barcode_parsing.py  test_barcode_scanner.py  test_case_implementation_status.md  test_comprehensive.py  test_config_manager.py  test_integration.py  test_qr_detection.py  test_simple_scanner.py  test_simulation_scanner.py  test_vision_system.py  (+1 more)
(+88 files in other folders)
