[project]
name = "aibi-cv"
version = "0.1.0"
description = "Barebones starter for the AIBI CV project using uv"
readme = "README.md"
requires-python = ">=3.10"

# no dependencies yet — team will add later
dependencies = [
    "opencv-python>=4.12.0.88",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
