[project]
name = "aibi-cv"
version = "0.1.0"
description = "Barebones starter for the AIBI CV project using uv"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "opencv-python>=4.12.0.88",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
