[project]
name = "aibi-cv"
version = "0.1.0"
description = "Barebones starter for the AIBI CV project using uv"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "opencv-python>=4.12.0.88",
    "pyzbar>=0.1.9",
    "numpy>=1.24.0",
    "keyboard>=0.13.5",
    "pygetwindow>=0.0.9",
    "pytest>=9.0.1",
    "transformers>=5.0.0",
    "torch>=2.10.0",
    "pillow>=12.1.0",
    "streamlit>=1.53.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
